--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,62 @@
-*{
-    padding:0;
-    font-family: 'Inter', sans-serif;
+* {
+  margin: 0;
+  font-family: "Inter", sans-serif;
 }
-
+a {
+  text-decoration: none;
+}
+/* Navbar Styles */
+.navbar {
+  display: flex;
+  align-content: center;
+  background-color: #21222a;
+  height: 90px;
+  padding: 30px 25px;
+}
+.nav-txt,
+.nav-side {
+  margin: 0;
+}
+.nav-txt {
+  margin-right: auto;
+  padding-top: 2.5%;
+  color: #61dafb;
+  font-weight: 700;
+  font-size: 40px;
+}
+.nav-side {
+  color: #deebf8;
+  font-weight: 600;
+}
+.nav-icon {
+  height: 80px;
+  margin-right: 7px;
+}
+/* Main content Styles */
+main {
+  background-color: #282d35;
+  color: #ffffff;
+  height: 450px;
+}
+.main-background {
+  background-image: url("./images/react-icon-large.png");
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+.main-title {
+  font-weight: 700;
+  padding: 60px 0px 0px 30px;
+  letter-spacing: -0.05em;
+}
+.main-list {
+  padding-left: 60px;
+  font-weight: 400;
+}
+.main-list > li {
+  line-height: 20px;
+  padding-block: 10px;
+}
+.main-list > li::marker {
+  color: #61dafb;
+  font-size: large;
+}
